Fix footer alignment issues on mobile

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -16,7 +16,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     flex-direction: row;
+    padding: 0;
 }
 
 .socialItem {
@@ -28,4 +30,10 @@
 
 .socialItem:hover {
     transform: scale(1.2);
+}
+
+@media screen and (max-width: 1025px) {
+    .title {
+        padding: 0;
+    }
 }
